# document-classifier-kit

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
evals/: golden.json  run.py
examples/: inbox_router.py  walkthrough.md
fixtures/: ambiguous-001.txt  complaint-001.txt  contract-001.txt  invoice-001.txt  job-application-001.txt  purchase-order-001.txt  spam-001.txt
src/doc_classifier/: __init__.py  classifier.py  cli.py  schema.py
tests/: test_classifier.py  test_schema.py
